--- a/pricenxt/cards.mdx
+++ b/pricenxt/cards.mdx
@@ -1,63 +1,41 @@
----
 title: "Cards and card types"
-description: "Understand the insight cards that populate Pricenxt boards."
+description: "Pick the right insight cards and learn how to configure them without touching code."
 ---
 
-## Card fundamentals
+## What makes up a card
 
-Cards are the atomic insight units inside every board column. They wrap data fetching, formatting, and visualization logic behind a consistent API so users can mix and match analytics without writing queries.
+Every card is a self-contained insight: it pulls data, formats it, and presents a story on your board. You only manage two simple inputs when creating one:
 
-Each card instance stores two things:
+1. **Title** – the label that appears at the top of the card. Use plain language like "Asia PX vs PET".
+2. **Settings** – a short form that asks for variants, comparison lists, thresholds, or colors depending on the card type.
 
-1. **Title** – human-readable label shown on the card chrome.
-2. **Metadata** – type-specific configuration captured via the card configurator (variant IDs, comparison lists, gauge thresholds, etc.).
+That’s it—the heavy lifting happens behind the scenes.
 
-```ts
-export interface CardFormData<T extends CardMetadata = CardMetadata> {
-  readonly title: string;
-  readonly metadata: T;
-}
-```
+## Creating a card in 4 steps
 
-## Lifecycle
+1. Click **Add card** inside the column where you want the insight to live.
+2. Choose a card type. Each tile shows an example so you can pick a format quickly.
+3. Fill in the prompts (variants, date range, alerts, etc.) and rename the title if needed.
+4. Save and drag the card to the position that makes sense for your workflow.
 
-1. Users open the card configurator (`ConfiguratorStep: select → configure`).
-2. Selected card type provides a default metadata payload from the registry.
-3. Form validation (`CardFormValidation`) ensures required fields and variants are present.
-4. Upon save, the card is persisted under the active column and rendered through the card registry.
+<Tip icon="wand-magic">Need a similar view with a different product? Duplicate the card, change the variant, and you’re done.</Tip>
 
-<Tip>Metadata objects are read-only by design. Always clone before mutating local state inside forms.</Tip>
+## Card types at a glance
 
-## Card types
-
-| Type | Best for | Key metadata |
+| Card | Use it when you want to… | What you control |
 | --- | --- | --- |
-| `price` | Single variant spot or monthly price tracking | `variantId`, `deltaPeriod`, `showForecast`, `chartStyle` |
-| `delta` | Highlighting period-over-period deltas | `variantId`, `deltaPeriod`, `showForecast` |
-| `list` | Monitoring multiple variants in a single list | `variantIds[]`, `deltaPeriod`, optional highlight color |
-| `compare` | Side-by-side comparison of up to four variants | `variantIds[]`, `deltaPeriod` |
-| `gauge` | Threshold-driven KPI view (e.g., utilization) | `variantId`, `gauge{min,max,t1}`, `chartStyle` |
-| `spread` | Tracking spreads between two variants | `variantIds[]`, `deltaPeriod`, `calculationMode` |
+| **Price** | Track one product’s spot or monthly price over time. | Variant, comparison period, optional forecast + chart style. |
+| **Delta** | Highlight how today compares with last week, month, or quarter. | Variant and delta period, with optional forecast toggle. |
+| **List** | Watch several variants in one compact table. | Up to 10 variants, period for deltas, optional highlight color. |
+| **Compare** | Place up to four variants side by side. | 2–4 variants plus the time period for the comparison. |
+| **Gauge** | Monitor a KPI against target zones (utilization, spread, etc.). | Variant plus minimum/maximum/threshold values and style. |
+| **Spread** | Measure the distance between two variants. | Two variants, comparison period, and calculation mode. |
 
-All available IDs live in `CARD_TYPE_OPTIONS`, ensuring filters, selectors, and Supabase enums stay aligned.
+Categories such as **commodity**, **capacity**, or **currency** help you filter while browsing the library. Status badges (for example, *Coming soon*) signal experimental ideas so you know what to expect before adding the card.
 
-```ts
-export const CARD_TYPE_OPTIONS = [
-  { id: "price", labelKey: "board.filters.card-types.price" },
-  // ...
-];
-```
+## Preview vs. live view
 
-## Categories & status badges
+- **Preview**: When you are in the configurator, you see a lightweight mock-up that reflects the settings you choose. It is meant to confirm the layout before saving.
+- **Live card**: Once on the board, the card updates with real data, deltas, and alerts. Use the pencil icon to reopen the configurator with the same settings whenever you need edits.
 
-- **Categories** (`CardCategory`) cluster cards when browsing: commodity, capacity, arbitrage, currency, plastixx, news.
-- **Status** (`CardStatus`) flags experimental types (e.g., `coming-soon`). The configurator displays these as Untitled UI badges.
-
-<Callout icon="wand-magic">Use category + status metadata to drive feature-flag rollouts without branching the registry.</Callout>
-
-## Display vs. preview components
-
-- `CardPreviewProps` render lightweight previews while configuring a board.
-- `CardDisplayProps` power the live dashboard. They receive optional `onEdit` handlers so the pencil icon can relaunch the configurator with existing metadata.
-
-Keeping these props aligned ensures cards render identically across creation, duplication, and drag-and-drop flows.
+Both experiences mirror each other, so what you approve in preview is what the rest of the team will read on the board.
