--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,58 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Pricenxt home"
+description: "Learn the app, explore insights, and jump to any guide from one place."
 ---
 
-## Setting up
+<Hero
+  title="Welcome to Pricenxt"
+  tagline="Your single source for understanding the platform, mastering the workflows, and explaining insights to teammates."
+  icon="sparkle"
+/>
 
-Get your documentation site up and running in minutes.
+## What you’ll find here
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+- **Guided tours** of boards, cards, and the price history chart so new teammates can get oriented quickly.
+- **How-to playbooks** for everyday tasks: creating boards, configuring cards, collaborating on insights, and sharing dashboards.
+- **Reference sections** that decode terminology, data sources, and every badge or control you see in the app.
 
-## Make it yours
+All pages are written for business users—no SQL or developer context needed. Keep Pricenxt open in another tab and follow along.
 
-Design a docs site that looks great and empowers your users.
+## Jump into a walkthrough
 
-<Columns cols={2}>
+<Columns cols={3}>
   <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
+    title="Boards overview"
+    icon="table-columns"
+    href="/pricenxt/boards"
   >
-    Edit your docs locally and preview them in real time.
+    Learn how to structure columns, add cards, and keep dashboards tidy.
   </Card>
   <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
+    title="Cards & card types"
+    icon="square-poll-vertical"
+    href="/pricenxt/cards"
   >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
+    See which insight format to pick and how to configure each one.
   </Card>
   <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
+    title="Price history chart"
+    icon="chart-line"
+    href="/pricenxt/price-history-chart"
   >
-    Auto-generate API documentation from OpenAPI specifications.
+    Understand every layer of the Insight page’s hero visualization.
   </Card>
 </Columns>
 
-## Create beautiful pages
+## Use this page as your hub
 
-Everything you need to create world-class documentation.
+1. Start with the guide that matches your current workflow.
+2. Follow the inline “Try it in the app” links to jump straight into Pricenxt.
+3. Return here whenever you need another concept—new sections will appear as the product grows.
 
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
+Each doc answers three questions:
 
-## Need inspiration?
+1. *What is the feature and why does it matter?*
+2. *How do I use it step by step?*
+3. *How can I explain the insight to someone else?*
 
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+Bookmark this homepage, share it with teammates, and check back after every product release for the latest guidance.
